Fix RSS feed author configuration

--- a/config.toml
+++ b/config.toml
@@ -4,9 +4,12 @@ title = "HAVA-Lab"
 
 [params]
   description = "Human-Aligned Video AI Laboratory - UvA Data Science Centre"
-  author = "HAVA-Lab"
   ogImage = "/media/og-image.jpg"
   location = "University Library Singel, Amsterdam"
+
+[author]
+  name = "HAVA-Lab"
+  email = "info@hava-lab.uva.nl"
 
 [menu]
   [[menu.main]]
