Configure for project page deployment to gowreesh-mago.github.io/hava-website
Changes:
- Update baseURL to include /hava-website/ path
- Fix image paths to use relative references (../images/)
- Disable RSS generation to avoid build errors
- Update Hugo version to 0.152.0 with correct GitHub Actions syntax
- Configure GitHub Pages artifact upload

Images now render correctly with relative paths that work both locally
and when deployed to the project page.

--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,12 @@
-baseURL = "https://gowreesh-mago.github.io/"
+baseURL = "https://gowreesh-mago.github.io/hava-website/"
 languageCode = "en"
 title = "HAVA-Lab"
+disableKinds = ["RSS"]
 
 [params]
   description = "Human-Aligned Video AI Laboratory - UvA Data Science Centre"
   ogImage = "/media/og-image.jpg"
   location = "University Library Singel, Amsterdam"
-
-[author]
-  name = "HAVA-Lab"
-  email = "info@hava-lab.uva.nl"
 
 [menu]
   [[menu.main]]
